Feat: se implementa registro de nuevos usuarios y se mejora la lógica de login